Dark mode fix for datepicker so that the year is visible

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -78,6 +78,18 @@
     border-color: #2f2f2f;
 }
 
+[data-theme="dark"] .numInput {
+    color: #000;
+    fill: grey;
+    background-color: grey !important;
+}
+
+[data-theme="dark"] .flatpickr-calendar {
+    color: darkgrey;
+    fill: grey;
+    background-color: grey !important;
+}
+
 .mce-content-body {
     color: #000;
     background-color: #fff !important;
